<!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="testInfoViewModel"
            type="org.akvo.caddisfly.viewmodel.TestInfoViewModel" />

        <variable
            name="testInfo"
            type="org.akvo.caddisfly.model.TestInfo" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#014378"
        android:keepScreenOn="true"
        android:orientation="vertical"
        tools:context=".sensor.ec.SensorActivity"
        tools:ignore="Overdraw">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/layoutTitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="6dp"
            android:paddingBottom="20dp"
            tools:ignore="UnknownId,UnknownIdInLayout">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="#fff"
                android:textSize="22sp"
                tools:text="Water - Electrical Conductivity" />

            <TextView
                android:id="@+id/textSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#d6f6fdf6"
                android:textSize="16sp"
                tools:text="Sensor ID: 123" />

            <TextView
                android:id="@+id/textSubtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#d6f6fdf6"
                android:textSize="16sp"
                tools:text="@string/dipSensorInSample" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageUsbConnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:alpha="0"
                android:contentDescription="@string/deviceConnectSensor"
                android:paddingBottom="24dp"
                android:src="@drawable/usb" />

            <ProgressBar
                android:id="@+id/progressWait"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="70dp"
                android:indeterminate="true"
                android:indeterminateTint="?progressTint"
                android:indeterminateTintMode="src_in"
                android:visibility="visible"
                tools:ignore="UnusedAttribute" />

            <LinearLayout
                android:id="@+id/layoutResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:alpha="0"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="?android:textColorSecondaryInverse"
                    android:textSize="70sp"
                    tools:text="20000" />

                <TextView
                    android:id="@+id/textUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dp"
                    android:alpha="0.4"
                    android:shadowColor="#cccccc"
                    android:shadowRadius="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:textColorSecondaryInverse"
                    tools:text="μS/cm" />

                <TextView
                    android:id="@+id/textResult2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:alpha="0.9"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="?android:textColorSecondaryInverse"
                    android:textSize="60sp"
                    android:visibility="gone"
                    tools:text="24" />

                <TextView
                    android:id="@+id/textUnit2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dp"
                    android:alpha="0.4"
                    android:shadowColor="#3c4a5b"
                    android:shadowRadius="1"
                    android:text="@string/celsius"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:textColorSecondaryInverse"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonSubmitResult"
                    style="@style/Button"
                    android:layout_marginTop="33dp"
                    android:onClick="onClickSubmitResult"
                    android:text="@string/submitResult"
                    android:theme="?primaryButtonStyle"
                    android:visibility="gone" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>
