...
    <plurals name="minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>

    <!--External-->
    <string name="sensor">Sensor</string>
    <string name="sensors">Sensors</string>

    <!--Sensor Details Screen-->
    <string name="deviceConnecting">Connecting to Device</string>

    <!--Sensor-->
    <string name="deviceConnectSensor">Connect sensor</string>
    <string name="celsius">°Celsius</string>
    <string name="dipSensorInSample">Dip sensor in sample</string>

    <string name="selectTest">Select Test</string>
    <string name="awaitingResult">Awaiting result</string>

    <string name="deviceConnected">Device connected</string>
...
